[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cenario/adaga.png" type="Texture" id=1]
[ext_resource path="res://scripts/obstaculos.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.125, 324 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.25, 324.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.25, 324.5 )

[node name="Obstaculos" type="Node2D"]
script = ExtResource( 2 )
walk_speed = 1350

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2( 237, -133 )
__meta__ = {
"_edit_group_": true
}

[node name="Texture" type="Sprite" parent="Top"]
position = Vector2( 427, 251 )
rotation = 3.93572
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="Top"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Area2D" type="Area2D" parent="Top"]
collision_layer = 512
collision_mask = 8

[node name="Collision2" type="CollisionPolygon2D" parent="Top/Area2D"]
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Center" type="StaticBody2D" parent="."]
position = Vector2( -123, 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Texture" type="Sprite" parent="Center"]
position = Vector2( 427, 251 )
rotation = 3.93572
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="Center"]
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Area2D" type="Area2D" parent="Center"]
collision_layer = 1024
collision_mask = 8

[node name="Collision2" type="CollisionPolygon2D" parent="Center/Area2D"]
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2( 560, 20 )
__meta__ = {
"_edit_group_": true
}

[node name="Texture" type="Sprite" parent="Bottom"]
position = Vector2( 427, 251 )
rotation = 3.93572
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="Bottom"]
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Area2D" type="Area2D" parent="Bottom"]
collision_layer = 2048
collision_mask = 8

[node name="Collision2" type="CollisionPolygon2D" parent="Bottom/Area2D"]
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Bottom2" type="StaticBody2D" parent="."]
position = Vector2( 346, 231 )
__meta__ = {
"_edit_group_": true
}

[node name="Texture" type="Sprite" parent="Bottom2"]
position = Vector2( 427, 251 )
rotation = 3.93572
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="Bottom2"]
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Area2D3" type="Area2D" parent="Bottom2"]
position = Vector2( -469, -225 )
collision_layer = 4096
collision_mask = 8

[node name="Collision2" type="CollisionPolygon2D" parent="Bottom2/Area2D3"]
position = Vector2( 469, 225 )
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 648, 323 )
scale = Vector2( 37.5, 32.5 )

[node name="ScoreArea" type="Area2D" parent="."]

[node name="Collision1" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 336, 326 )
shape = SubResource( 1 )

[node name="Collision2" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 565, 326 )
shape = SubResource( 1 )

[node name="Collision3" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 697, 325 )
shape = SubResource( 1 )

[node name="Collision4" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 803, 328 )
shape = SubResource( 2 )

[node name="Collision5" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 1017, 327 )
shape = SubResource( 3 )

[node name="Bottom3" type="StaticBody2D" parent="."]
position = Vector2( 108, 119 )
__meta__ = {
"_edit_group_": true
}

[node name="Texture" type="Sprite" parent="Bottom3"]
position = Vector2( 427, 251 )
rotation = 3.93572
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="Bottom3"]
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[node name="Area2D4" type="Area2D" parent="Bottom3"]
position = Vector2( -231, -113 )
collision_layer = 8192
collision_mask = 8

[node name="Collision2" type="CollisionPolygon2D" parent="Bottom3/Area2D4"]
position = Vector2( 231, 113 )
build_mode = 1
polygon = PoolVector2Array( 433, 245, 409, 245, 408, 245, 403, 248, 400, 250, 399, 251, 399, 251, 399, 251, 399, 251, 400, 252, 402, 253, 407, 256, 407, 256, 409, 257, 432, 257, 433, 256, 433, 258, 433, 259, 437, 259, 438, 259, 438, 259, 438, 255.025, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 438, 254, 440, 254, 453, 254, 455, 251, 453, 248, 438, 248, 438, 243, 433, 243 )

[connection signal="screen_exited" from="Notifier" to="." method="_on_screen_exited"]
[connection signal="body_exited" from="ScoreArea" to="." method="on__body_exited"]
